scrollbar fixes

--- a/src/components/hero-banner/sass/_hero-banner.scss
+++ b/src/components/hero-banner/sass/_hero-banner.scss
@@ -1061,3 +1061,7 @@ section#hero-banner {
     }
   }
 }
+
+.hero-items img {
+    width: 100%;
+}
